--- a/HTML-CSS/exer2/css/estilos.css
+++ b/HTML-CSS/exer2/css/estilos.css
@@ -1,3 +1,42 @@
+@font-face {
+  font-family: 'icomoon';
+  src:  url('../fonts/icomoon.eot?uytima');
+  src:  url('../fonts/icomoon.eot?uytima#iefix') format('embedded-opentype'),
+    url('../fonts/icomoon.ttf?uytima') format('truetype'),
+    url('../fonts/icomoon.woff?uytima') format('woff'),
+    url('../fonts/icomoon.svg?uytima#icomoon') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+[class^="icon-"], [class*=" icon-"] {
+  /* use !important to prevent issues with browser extensions that change fonts */
+  font-family: 'icomoon' !important;
+  speak: none;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+
+  /* Better Font Rendering =========== */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-phone:before {
+  content: "\e942";
+}
+.icon-menu:before {
+  content: "\e9bd";
+}
+.icon-close:before {
+  content: "\ea0d";
+}
+.icon-envelope:before {
+  content: "\ea85";
+}
+
 body{
 	font-family: 'Allerta', sans-serif;
 	margin: 0;
@@ -28,11 +67,12 @@ input:focus, textarea:focus{
 	background: lightgray;
 }
 .contenedor{
-	width: 800px;
+	max-width: 800px;
 	margin: auto;
 	position: relative;
 }
 .background{
+	background-color: #466173;
 	background-image: url("../images/background.png");
 	background-size: cover;
 }
@@ -43,7 +83,7 @@ input:focus, textarea:focus{
 	color: white;
 	padding: 7px 12px;
 	font-size: 18px;
-	background: linear-gradient(to left, #f3344e #ff7250);
+	background: linear-gradient(to left, #f3344e, #ff7250);
 	cursor: pointer;
 }
 .titulo{
@@ -197,4 +237,207 @@ header{
 .tabla{
 	margin: 50px 0;
 }
+.burguer-button{
+	display: inline-block;
+	text-align: center;
+	width: 40px;
+	height: 40px;
+	line-height: 40px;
+	border-radius: 50%;
+	background: #395667;
+	position: absolute;
+	top: 20px;
+	left: 20px;
+	cursor: pointer;
+	z-index: 10;
+	color: white;
 
+}
+
+/*=======VIDEO EXTERNO RESPONSIVE=============*/
+.video-responsive-contenedor{
+	position: relative;
+	padding-top: 56.4%; /*  (1080 * 100) / 1920 */
+}
+.video-responsive-src{
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	width: 100%;
+	height: 100%;
+}
+
+@media screen and (max-width: 800px){
+	/*PRECIOS*/
+	.table{
+		margin: 50px 20px;
+	}
+	.tabla .contenedor{
+		overflow: auto;
+		border: 1px solid #000;
+	}
+
+	/*=========== PORTADA */
+	.titulo{
+		font-size: 45px;
+		margin-top: 30px;
+	}
+	.title-a{
+		font-size: 18px;
+	}
+	.portada{
+		height: auto;
+	}
+	.portada .button{
+		margin-bottom: 30px;
+		display: inline-block;
+	}
+	/*Guitarras */
+	.guitarras{
+		text-align: center;
+	}
+	.left,
+	.right{
+		float: none;
+		position: static;
+	}
+	.title-b{
+		margin: 0;
+	}
+	.guitarra li{
+		list-style: none;
+	}
+	.guitarra.b{
+		height: auto;
+	}
+	.contenedor-guitarra-b{
+		position: static;
+		margin: 0;
+	}
+	.contenedor-guitarra-a{
+		padding: 0;
+	}
+}
+
+
+@media screen and (max-width: 767px){
+	.footer .contenedor{
+		display: block;
+	}
+	.contacto{
+		margin: 0 auto;
+	}
+	.formulario{
+		display: block;
+		margin: 0 auto;
+		width: 300px;
+	}
+	.intereses label{
+		display: block;
+		font-size: 16px;
+	}
+	input[type="text"],
+	input[type="email"]{
+		font-size: 16px;
+		padding: 5px;
+	}
+	.col1{
+		margin: 0;
+	}
+	textarea{
+		width: 100%;
+	}
+	input[type="radio"],
+	input[type="checkbox"]{
+		zoom: 1.5; /*NO SPORTADO EN FIREFOX */
+	}
+}
+
+/*======================================*/
+@media screen and (max-width: 650px){
+	header{
+		text-align: center;
+	}
+	.logotipo{
+		margin: 0;
+	}
+	.menu{
+		position: static;
+		display: block;	
+	}
+	.menu li:first-child{
+		margin: 0;
+	}
+	.menu ul{
+		padding: 0;
+	}
+
+
+}
+@media screen and (max-width: 500px){
+	.portada .contenedor{
+		position: static;
+	}
+	.header .contenedor,
+	.header{
+		position: static;
+	}
+	.menu{
+		background: rgba(255, 60, 88, .8);
+		position: absolute;
+		top: 0;
+		left: -100%;
+		bottom: 0;
+		right: 0;
+		z-index: 2;
+		display: flex;
+		align-items: center;
+		width: 100%;
+		transition: .3s;
+	}
+	.menu.active{
+		left: 0;
+	}
+	.menu ul{
+		flex: 1;
+	}
+	.menu li{
+		display: block;
+		margin: 0;
+		padding: 8px 0;
+		border-bottom: 1px solid white;
+	}
+	.menu li:first-child{
+		border-top: 1px solid white;
+	}
+	.menu li:before{
+		display: none;
+	}
+	.portada{
+		text-align: center;
+	}
+	.titulo{
+		font-size: 30px;
+	}
+	.title{
+		font-size: 16px;
+	}
+	/* GUTARRAS */
+	.guitarra img{
+		width: 200px;
+	}
+	.title-b{
+		font-size: 30px;
+	}
+
+}
+
+/*MEDIA QUERY PARA PANTALLAS 2X */
+
+@media screen and (-webkit-min-device-pixel-ratio: 2){
+	.background{
+		background-image: url("../images/background2x.png");
+	}
+}
